nova_tests/plan124/neg/plan124_8_zero_on_move_on_protocol_neg.nv
// EXPECT_COMPILE_ERROR E_ZERO_ON_MOVE_INVALID_KIND
//
// Plan 124.8 [M-124.8-zero-on-move] — negative:
// `#zero_on_move` нельзя применить к protocol (нет own storage).
module neg.plan124_8_zero_on_move_on_protocol_neg

#zero_on_move
type FooProto protocol {
    @hash() -> int
}
